/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.6.4/userguide/tutorial_java_projects.html
 */


plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application
    id 'application'

    // id 'org.springframework.boot' version '2.2.2.RELEASE'
    // id 'io.spring.dependency-management' version '1.0.8.RELEASE'
}

group = 'tw.yukina'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenCentral()
}

//ext {
//	set('vaadinVersion', "14.1.3")
//}

dependencies {
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
    
    compile group: 'com.google.inject', name: 'guice', version: '4.2.2'

    // implementation 'org.springframework.boot:spring-boot-starter-batch'
    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // implementation 'org.springframework.boot:spring-boot-starter-security'
    // implementation 'org.springframework.boot:spring-boot-starter-web'
    // implementation 'com.vaadin:vaadin-spring-boot-starter'
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:28.0-jre'

    implementation project(path:':portal-framework-api')
    implementation project(path:':portal-framework-common')

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
//     testImplementation('org.springframework.boot:spring-boot-starter-test') {
//		     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
//	   }
//     testImplementation 'org.springframework.batch:spring-batch-test'
//     testImplementation 'org.springframework.security:spring-security-test'
}

// dependencyManagement {
// 	 imports {
// 		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
// 	}
//}

application {
    // Define the main class for the application
    mainClassName = 'tw.yukina.portalframework.core.Launcher'
}

//test {
//    useJUnitPlatform()
//}
